# ChangeLog for www-client/conkeror
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jan 2014; Ulrich Müller <ulm@gentoo.org> +conkeror-9999.ebuild,
  +files/conkeror.desktop, +files/conkeror.sh, +metadata.xml:
  Copied from Portage tree. Fixes for live ebuild contributed by
  Jauhien Piatlicki <piatlicki@gmail.com> in bug 497024.

  09 Apr 2009; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
  Update herd in metadata.

*conkeror-0.9_pre20090401 (07 Apr 2009)

  07 Apr 2009; Ulrich Mueller <ulm@gentoo.org>
  +conkeror-0.9_pre20090401.ebuild:
  Add ebuild for upstream snapshot.

  10 Feb 2009; Ulrich Mueller <ulm@gentoo.org> +files/conkeror.desktop,
  conkeror-9999.ebuild:
  Also install "help", "style" and "tests" subdirectories. Add desktop entry.

  05 Sep 2008; Christian Faulhammer <opfer@gentoo.org> conkeror-9999.ebuild:
  add a DESCRIPTION

*conkeror-9999 (05 Sep 2008)

  05 Sep 2008; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +conkeror-9999.ebuild:
  Initial import, work in progress. Ebuild contributed by me.
