@@ -4,6 +4,8 @@
 for cmd in firefox firefox-bin; do
     xr=$(type -p ${cmd})
     if [[ -n ${xr} ]]; then
+	: ${MOZ_PLUGIN_PATH:=/usr/lib/nsbrowser/plugins} #497070
+	export MOZ_PLUGIN_PATH
  	exec "${xr}" -app /usr/share/conkeror/application.ini "$@"
     fi
 done
