@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  13 Feb 2014; Ulrich Müller <ulm@gentoo.org> conkeror-9999.ebuild,
+  files/conkeror.sh:
+  Switch to master branch. Merge some changes from Portage tree.
+
   21 Jan 2014; Ulrich Müller <ulm@gentoo.org> +conkeror-9999.ebuild,
   +files/conkeror.desktop, +files/conkeror.sh, +metadata.xml:
   Copied from Portage tree. Fixes for live ebuild contributed by
